# pj_docs

./: .gitignore  README.md  main.py  pyproject.toml  relatorio_pj_docs.docx  utils.py
ui/: tela_cadastro.py  tela_cadastro.ui  tela_principal.py  tela_principal.ui
